Add validations and classes

--- a/auction_site/app/views/users/new.html.erb
+++ b/auction_site/app/views/users/new.html.erb
@@ -1,19 +1,19 @@
-<h2>Add new user</h2>
+<h2>Sign up</h2>
 
 <%= form_for @user do |f| %>
 <%= render 'layouts/errors', model: @user %>
 
 	<%= f.label :name %>
-	<%= f.text_field :name %>
-	<br />
+	<%= f.text_field :name, class: 'form-control' %>
+	
 	<%= f.label :email %>
-	<%= f.text_field :email %>
-	<br />
+	<%= f.text_field :email, class: 'form-control' %>
+	
 	<%= f.label :password %>
-	<%= f.password_field :password %>
-	<br />
+	<%= f.password_field :password, class: 'form-control' %>
+	
 	<%= f.label :password_confirmation %>
-	<%= f.password_field :password_confirmation %>
-	<br />
-	<%= f.submit %>
+	<%= f.password_field :password_confirmation, class: 'form-control' %>
+	
+	<%= f.submit 'Sign up', class: 'btn btn-primary' %>
 <% end %>
