--- a/auction_site/app/views/layouts/application.html.erb
+++ b/auction_site/app/views/layouts/application.html.erb
@@ -7,30 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<nav>
-	<ul>
-		<li><%= link_to 'Users', users_path %></li>
-		<li><%= link_to 'Sign up', new_user_path %></li>
-		<li><%= link_to 'Products', products_path %></li>
-	</ul>
- 	<ul>
- 	<% if current_user %>
- 		<li>Hi <%= current_user.name %>!</li>
- 		<li><%= link_to 'Log out', logout_path %></li>
- 	<% else %>	
- 		<li><%= link_to 'Log in', login_path %></li>
- 	<% end %>
- 	</ul>
-</nav>
-
-<h1>Auction site</h1>
-
-<% flash.each do |key, value| %>
-		<%= content_tag :div, value, class: "flash-info" %>
-<% end %>
-
-<%= yield %>
-
+	<%= render 'layouts/header' %>
+	<div class="container">
+		<% flash.each do |key, value| %>
+				<%= content_tag :div, value, class: "alert alert-#{key}" %>
+		<% end %>
+		<%= yield %>		
+	</div>
 </body>
 </html>
