--- a/auction_site/app/views/layouts/_header.html.erb
+++ b/auction_site/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
 			</ul>
 		 	<ul class="nav navbar-nav navbar-right">
 		 	<% if current_user %>
-		 		<li>Hi <%= current_user.name %>!</li>
+		 		<li><%= link_to 'New product', new_product_path %></li>
 		 		<li><%= link_to 'Log out', logout_path %></li>
 		 	<% else %>	
 				<li><%= link_to 'Sign up', new_user_path %></li>
