--- a/auction_site/app/views/users/show.html.erb
+++ b/auction_site/app/views/users/show.html.erb
@@ -1,5 +1,14 @@
 <h2><%= @user.name %></h2>
 <p>Email address: <%= @user.email %></p>
-<p>Member since: <%= @user.created_at %></p>
+<p>Member for <%= time_ago_in_words(@user.created_at) %></p>
 
-<li><%= link_to 'New product', new_user_product_path(params[:id]) %></li>
+<h3>Products</h3>
+<% if @user.products.blank? %>
+	<p>No products yet.</p>
+<% else %>
+	<ul>
+		<% @user.products.each do |product| %>
+		<li><%= link_to product.title, product_path(product) %></li>
+		<% end %>
+	</ul>
+<% end %>
