Improve product creation

--- a/auction_site/app/views/layouts/_errors.html.erb
+++ b/auction_site/app/views/layouts/_errors.html.erb
@@ -1,16 +1,15 @@
 <% if model.errors.any? %>
-
-<p><strong>
-	<%= pluralize(model.errors.count, "error") %>
-	<%= "prohibited this #{model.class.name} from being saved:" %>
-</strong></p>
-
-<ul>
-	<% model.errors.full_messages.each do |message| %>
-	<li>
-		<%= message %>
-	</li>
-	<% end %>
-</ul>
-
+	<div class="alert alert-danger">
+		<p>
+			<%= pluralize(model.errors.count, "error") %>
+			<%= "prohibited this #{model.class.name} from being saved:" %>
+		</p>
+		<ul>
+			<% model.errors.full_messages.each do |message| %>
+			<li>
+				<%= message %>
+			</li>
+			<% end %>
+		</ul>
+	</div>
 <% end %>
