Collapse main nav

--- a/auction_site/app/views/layouts/_header.html.erb
+++ b/auction_site/app/views/layouts/_header.html.erb
@@ -1,22 +1,31 @@
 <header>
-	<div class = "container-fluid">
-		<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default">
+		<div class = "container-fluid">
 			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapsed" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
 				<%= link_to 'Auction site', root_path, class: 'navbar-brand' %>
 			</div>
-			<ul class="nav navbar-nav navbar-left">
-				<li><%= link_to 'Users', users_path %></li>
-				<li><%= link_to 'Products', products_path %></li>
-			</ul>
-		 	<ul class="nav navbar-nav navbar-right">
-		 	<% if current_user %>
-		 		<li><%= link_to 'New product', new_product_path %></li>
-		 		<li><%= link_to 'Log out', logout_path %></li>
-		 	<% else %>	
-				<li><%= link_to 'Sign up', new_user_path %></li>
-		 		<li><%= link_to 'Log in', login_path %></li>
-		 	<% end %>
-		 	</ul>
-		</nav>
-	</div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="navbar-collapsed">
+				<ul class="nav navbar-nav">
+					<li><%= link_to 'Users', users_path %></li>
+					<li><%= link_to 'Products', products_path %></li>
+				</ul>
+			 	<ul class="nav navbar-nav navbar-right">
+			 	<% if current_user %>
+			 		<li><%= link_to 'New product', new_product_path %></li>
+			 		<li><%= link_to 'Log out', logout_path %></li>
+			 	<% else %>	
+					<li><%= link_to 'Sign up', new_user_path %></li>
+			 		<li><%= link_to 'Log in', login_path %></li>
+			 	<% end %>
+			 	</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
 </header>
