--- a/auction_site/app/views/users/show.html.erb
+++ b/auction_site/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <p>Email address: <%= @user.email %></p>
 <p>Member for <%= time_ago_in_words(@user.created_at) %></p>
 
-<h3>My products</h3>
+<h3>Products</h3>
 <% if @user.products.blank? %>
 	<p>No products yet.</p>
 <% else %>
@@ -13,7 +13,7 @@
 	</ul>
 <% end %>
 
-<h3>My bids</h3>
+<h3>Bids</h3>
 <% if @user.bids.blank? %>
 	<p>No bids yet.</p>
 <% else %>
