--- a/concert_network/app/assets/stylesheets/application.css
+++ b/concert_network/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@ html {
   position: relative;
   min-height: 100%;
 }
+
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
@@ -30,4 +31,9 @@ body {
   height: 60px;
   background-color: #f5f5f5;
   padding-top: 1em;
+}
+
+/* forms */
+input, textarea, select {
+  margin-bottom: 1em;
 }
