--- a/concert_network/app/views/concerts/show.html.erb
+++ b/concert_network/app/views/concerts/show.html.erb
@@ -11,9 +11,8 @@
 
 <h4>What do you think?</h4>
 <%= form_for [@concert, @comment] do |f| %>
-	<%= f.text_area :text %>
-	<br />
-	<%= f.submit %>
+	<%= f.text_area :text, class: 'form-control' %>
+	<%= f.submit 'Comment', class: 'btn btn-primary' %>
 <% end %>
 
 <% if !@comments.blank? %>
