Fix user creation

--- a/concert_network/app/views/users/new.html.erb
+++ b/concert_network/app/views/users/new.html.erb
@@ -3,5 +3,5 @@
 	<p>Email: <%= f.text_field :email, class: "form-control" %></p>
 	<p>Password: <%= f.password_field :password, class: "form-control" %></p>
 	<p>Password confirmation: <%= f.password_field :password_confirmation, class: "form-control" %></p>
-	<%= f.submit "Submit" %>
+	<%= f.submit "Sign up", class: "btn btn-primary" %>
 <% end %>
