--- a/concert_network/app/views/concerts/search_by_price.html.erb
+++ b/concert_network/app/views/concerts/search_by_price.html.erb
@@ -17,6 +17,6 @@
 		</p></li>
 	<% end %>
 	</ul>
-<% else %>
+<% elsif !@amount.blank? %>
 	<p>No concerts upcoming under <%= @amount %>€, sorry!</p>
 <% end %>
