--- a/concert_network/app/views/concerts/new.html.erb
+++ b/concert_network/app/views/concerts/new.html.erb
@@ -1,26 +1,26 @@
 <h2>Add a new concert</h2>
 
 <%= form_for @concert do |f| %>
-	<p><%= f.label :band %></p>
-	<%= f.text_field :band %>
-	<br />
-	<p><%= f.label :venue %></p>
-	<%= f.text_field :venue %>
-	<br />
-	<p><%= f.label :city %></p>
-	<%= f.text_field :city %>
-	<br />
-	<p><%= f.label :date %></p>
-	<%= f.date_field :date %>
-	<br />
-	<p><%= f.label :price %></p>
-	<%= f.number_field :price %>
-	<br />
-	<p><%= f.label :description %></p>
-	<%= f.text_area :description %>
-	<br />
-	<p><%= f.label :poster %></p>
+	<%= f.label :band %>
+	<%= f.text_field :band, class: "form-control" %>
+	
+	<%= f.label :venue %>
+	<%= f.text_field :venue, class: "form-control" %>
+	
+	<%= f.label :city %>
+	<%= f.text_field :city, class: "form-control" %>
+	
+	<%= f.label :date %>
+	<%= f.date_field :date, class: "form-control" %>
+	
+	<%= f.label :price %>
+	<%= f.number_field :price, class: "form-control" %>
+	
+	<%= f.label :description %>
+	<%= f.text_area :description, class: "form-control" %>
+	
+	<%= f.label :poster %>
 	<%= f.file_field :poster %>
-	<br />
-	<%= f.submit %>
+	
+	<%= f.submit "Add concert", class: "btn btn-primary" %>
 <% end %>
